<resources>
    <string name="title_activity_foods">Comidas</string>
    <string name="title_activity_training">Entrenamiento</string>
    <string name="title_activity_achievements">Logros</string>
    <string name="title_activity_exercisies_type">Tipos de ejercicios</string>
    <string name="title_activity_chest">Ejercicios de pecho</string>
    <string name="app_name">NeverGiveApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Editar</string>
    <string name="action_view">Visualización</string>
    <string name="lunes_tab">LUNES</string>
    <string name="martes_tab">MARTES</string>
    <string name="miercoles_tab">MIÉRCOLES</string>
    <string name="jueves_tab">JUEVES</string>
    <string name="viernes_tab">VIERNES</string>
    <string name="sabado_tab">SÁBADO</string>
    <string name="domingo_tab">DOMINGO</string>
    <string name="mis_tablas_tab">MIS TABLAS</string>
    <string name="default_tablas_tab">TABLAS PREDEFINIDAS</string>
    <string name="puntos_tab">PUNTOS DE LOGRO</string>
    <string name="foods_tab">COMIDAS</string>
    <string name="training_tab">ENTRENAMIENTO</string>
    <string name="events_tab">EVENTOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="inicio">Inicio</string>
    <string name="calendario_comidas">Calendario de comidas</string>
    <string name="localizacion">Localización</string>
    <string name="logros">Logros</string>
    <string name="reinicio">Reiniciar base de datos</string>
    <string name="titleCard">Título</string>
    <string name="infoDays">Días de la semana:</string>
    <string name="infoKcal">Todal de Kcal:</string>
    <string name="series">Series:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="descanso">Descanso:</string>
    <string name="totalSeries">Series completadas:</string>
    <string name="descripcionResume">Descripción:</string>
    <string name="newTable">Empieza a crear tú tabla</string>
    <string name="newExercise">Vamos con el siguiente paso</string>
    <string name="numeroSeries">Número total de series: </string>
    <string name="numeroRepeticiones">Número de repeticiones: </string>
    <string name="tiempoDescando">Tiempo de descanso: </string>
    <string name="editTable">Modifica los datos de tu tabla</string>
    <string name="nombreEntrenamiento">Nombre de la tabla:</string>
    <string name="diasEntrenamiento">Días de entrenamiento:</string>
    <string name="continuar">Continuar</string>
    <string name="editar">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="nseries">Series:</string>
    <string name="nrep">Rep:</string>
    <string name="ndescanso">Descanso:</string>
    <string name="newFood">Datos para la comida</string>
    <string name="nombreComida">Nombre del plato:</string>
    <string name="diasComida">Días para este plato:</string>
    <string name="weekPicker">Escoge unos días</string>
    <string name="weekCheck">Sellecionar todos</string>
    <string name="weekLU">LU</string>
    <string name="weekM">M</string>
    <string name="weekX">X</string>
    <string name="weekJU">JU</string>
    <string name="weekVI">VI</string>
    <string name="weekSA">SA</string>
    <string name="weekDO">DO</string>
    <string name="titleDescanso">Establece un tiempo de descando</string>
    <string name="segundos">Segundos</string>
    <string name="minutos">Minutos</string>
    <string name="cuidado">¡CUIDADO COMPAÑERO!</string>
    <string name="avisoVolver">Si sales de esta pantalla no se guardaran los datos, ¿estas seguro?</string>
    <string name="avisoTrain">Estas a punto de borrar todas tus tablas de entrenamiento, ¿estas seguro de que deseas continuar?</string>
    <string name="avisoFood">Estas a punto de borrar todas tus comidas, ¿estas seguro de que deseas continuar?</string>
    <string name="avisoMain">Estas a punto de eliminar todos los datos guardadosav, ¿estas seguro de que deseas continuar?</string>
    <string name="acceptButton">Sí, estoy seguro</string>
    <string name="noAcceptButton">No, seguir aquí</string>
    <string name="tipoComda">Tipo de comida:</string>
    <string name="listKcal">Escoge ingredientes de la lista para saber las kcal totales:</string>
    <string name="avisoApi">Vaya :(\nParece que no hemos podido cargar los datos, comprueba que estas conectado a Internet y recarga la vista.</string>
    <string name="pasta">Pasta</string>
    <string name="huevos">Huevos</string>
    <string name="leche">Leche</string>
    <string name="carne">Carne</string>
    <string name="pescado">Pescado</string>
    <string name="verdura">Verdura</string>
    <string name="bolleria">Bollería</string>
    <string name="cereales">Cereales</string>
    <string name="legumbre">Legumbre</string>
    <string name="embutido">Embutido</string>
    <string name="queso">Queso</string>
    <string name="yogurt">Yogurt</string>
    <string name="totalKcal">Total de Kcal:</string>
    <string name="foodImage">Cambiar imagen</string>
    <string name="element_settings">Opciones</string>
    <string name="element_edit">Editar</string>
    <string name="element_delete">Eliminar</string>
    <string name="all_delete">Eliminar todos las tablas</string>
    <string name="comidas_hoy">Comidas de hoy</string>
    <string name="tablas_entrenamiento">Tablas de entrenamiento</string>
    <string name="proximos_eventos">Próximos eventos</string>
    <string name="ultimos_logros">Últimos logros conseguidos</string>
    <string name="desayuno">DESAYUNO</string>
    <string name="tentempie">TENTEMPIÉ</string>
    <string name="comida">COMIDA</string>
    <string name="merienda">MERIENDA</string>
    <string name="cena">CENA</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="total_exercises">Total de ejercicios:</string>
    <string name="history">Historial</string>
    <string name="logros_completados">Logros completados</string>
    <string name="pecho">Pecho</string>
    <string name="espalda">Espalda</string>
    <string name="biceps">Bíceps</string>
    <string name="triceps">Tríceps</string>
    <string name="hombro">Hombro</string>
    <string name="pierna">Pierna</string>
    <string-array name="exerciseTypes">
        <item>Ejercicios de espalda</item>
        <item>Ejercicios de pecho</item>
        <item>Ejercicios de biceps</item>
        <item>Ejercicios de triceps</item>
        <item>Ejercicios de pierna</item>
        <item>Abdominales de hierro</item>
    </string-array>
    <string name="title_activity_espalda">Ejercicios de espalda</string>
    <string name="title_table_resume_activity">Resumen de la tabla</string>
    <string name="title_activity_food_resume">Resumen de la comida</string>
    <string-array name="defaultTables">
        <item>Entrenamiento de pecho</item>
        <item>Entrenamiento de espalda</item>
        <item>Entrenamiento de brazo</item>
        <item>Entrenamiento de pierna</item>
    </string-array>
    <string-array name="all_exercises_titles">
        0
        <item>Saltos de tijera</item>
        1
        <item>Flexiones en caja</item>
        2
        <item>Estiramiento de cobra</item>
        3
        <item>Burpees</item>

        4
        <item>Flexiones</item>
        5
        <item>Flexiones con inclinación</item>
        6
        <item>Flexiones con apoyo de rodillas</item>
        7
        <item>Flexiones con brazos abiertos</item>
        8
        <item>Flexiones en diamante</item>

        9
        <item>Flexiones hindúes</item>
        10
        <item>Biceps en suelo</item>
        11
        <item>Extensiones de tríceps</item>
        12
        <item>Tríceps en silla</item>

        13
        <item>Crunch abdominales</item>
        14
        <item>Platusa</item>
        15
        <item>Puente lateral derecho</item>
        16
        <item>Crunch de bicicleta</item>
        17
        <item>Abdominal en V</item>
        18
        <item>Twist ruso</item>
        19
        <item>Escalada de montaña</item>
        20
        <item>Toque al talón</item>
        21
        <item>Flexión y rotación</item>

        22
        <item>Zancada cruzada</item>
        23
        <item>Sentadilla de sumo</item>
        24
        <item>Sentadillas con salto</item>
    </string-array>
    <string-array name="all_exercises_types">
        0
        <item>Espalda</item>
        1
        <item>Espalda</item>
        2
        <item>Espalda</item>
        3
        <item>Espalda</item>

        4
        <item>Pecho</item>
        5
        <item>Pecho</item>
        6
        <item>Pecho</item>
        7
        <item>Pecho</item>
        8
        <item>Pecho</item>

        9
        <item>Biceps</item>
        10
        <item>Biceps</item>
        11
        <item>Triceps</item>
        12
        <item>Triceps</item>

        13
        <item>Abdominales</item>
        14
        <item>Abdominales</item>
        15
        <item>Abdominales</item>
        16
        <item>Abdominales</item>
        17
        <item>Abdominales</item>
        18
        <item>Abdominales</item>
        19
        <item>Abdominales</item>
        20
        <item>Abdominales</item>
        21
        <item>Abdominales</item>

        22
        <item>Pierna</item>
        23
        <item>Pierna</item>
        24
        <item>Pierna</item>
    </string-array>
</resources>