<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/popUpTitle">

            <TextView
                android:text="@string/weekPicker"
                style="@style/popUpTextTitle"/>
        </LinearLayout>
        <LinearLayout
            style="@style/popUpData"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ToggleButton
                    android:id="@+id/button_lunes"
                    style="@style/botonDias"
                    android:textOn="@string/weekLU"
                    android:textOff="@string/weekLU" />
                <ToggleButton
                    android:id="@+id/button_martes"
                    style="@style/botonDias"
                    android:textOn="@string/weekM"
                    android:textOff="@string/weekM" />
                <ToggleButton
                    android:id="@+id/button_miercoles"
                    style="@style/botonDias"
                    android:textOn="@string/weekX"
                    android:textOff="@string/weekX" />
                <ToggleButton
                    android:id="@+id/button_jueves"
                    style="@style/botonDias"
                    android:textOn="@string/weekJU"
                    android:textOff="@string/weekJU" />
                <ToggleButton
                    android:id="@+id/button_viernes"
                    style="@style/botonDias"
                    android:textOn="@string/weekVI"
                    android:textOff="@string/weekVI" />
                <ToggleButton
                    android:id="@+id/button_sabado"
                    style="@style/botonDias"
                    android:textOn="@string/weekSA"
                    android:textOff="@string/weekSA" />
                <ToggleButton
                    android:id="@+id/button_domingo"
                    style="@style/botonDias"
                    android:textOn="@string/weekDO"
                    android:textOff="@string/weekDO" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/weekCheck"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            style="@style/popUpButtons"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:text="@string/continuar"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>