<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/popUpTitle">

            <TextView
                android:text="@string/newFood"
                style="@style/popUpTextTitle"/>
        </LinearLayout>
        <LinearLayout
            style="@style/popUpData">

            <TextView
                android:text="@string/nombreComida"
                style="@style/popUpNames"/>

            <EditText
                android:id="@+id/name_food"
                style="@style/popUpEdits"/>

            <TextView
                android:text="@string/diasComida"
                style="@style/popUpNames" />

            <EditText
                android:id="@+id/food_days"
                style="@style/popUpEdits"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"/>
            <Spinner
                android:id="@+id/food_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>


        <LinearLayout
            style="@style/popUpButtons">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:text="@string/continuar"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
