<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rigobertosl.nevergiveapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_lunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunes_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_martes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/martes_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_miercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miercoles_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_jueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jueves_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_viernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viernes_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sabado_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo_tab" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
