<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rigobertosl.nevergiveapp.ExercisesTypeActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/table_exercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pecho"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/pecho" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/espalda"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/espalda" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/biceps"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/biceps" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/triceps"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/triceps" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/hombro"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/hombro" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/pierna"
                style="@style/button_exercices_type"
                android:clickable="true"
                android:orientation="horizontal"
                android:background="@color/colorRow">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/achievements_logo" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="50dp"
                    android:text="@string/pierna" />

            </LinearLayout>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>