<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_margin="1dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="2dp"
        app:cardElevation="1dp"
        card_view:cardCornerRadius="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/nombre_ejercicio"
                android:text="Title"
                style="@style/exerciseName"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/repeticiones"
                    android:layout_marginStart="15dp"
                    style="@style/AttributeExerciseText"
                    android:text="@string/repeticiones" />
                <EditText
                    android:id="@+id/num_repeticiones"
                    android:gravity="center"
                    style="@style/ContentExerciseAttributeShort"/>
                <TextView
                    android:id="@+id/series"
                    style="@style/AttributeExerciseText"
                    android:text="@string/nseries" />
                <EditText
                    android:id="@+id/num_series"
                    android:gravity="center"
                    style="@style/ContentExerciseAttributeShort" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/descanso"
                    style="@style/AttributeExerciseText"
                    android:text="@string/ndescanso" />
                <EditText
                    android:id="@+id/num_descanso"
                    style="@style/ContentExerciseAttributeLarge"
                    android:inputType="date"
                    android:focusable="false"
                    android:gravity="center"
                    android:clickable="true"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>